Homework-2 refactor